--- a/.github/defaults/env-defaults.yml
+++ b/.github/defaults/env-defaults.yml
@@ -21,3 +21,11 @@ payloadcms_defaults: |
   PREVIEW_SECRET=YOUR_SECRET_HERE
   PAYLOAD_SKIP_MIGRATION=true
   NEXT_SKIP_DB_CONNECT=true
+
+# For Payload Prod secret, delete the skips
+# For example:
+# DATABASE_URI=postgres://payloadcms-user:payloadcmsPass@payloadcms-postgres-db-portfolio-prod:5432/payloadcms-db
+# PAYLOAD_SECRET=0505d1e544a564c8730e83fb
+# NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+# CRON_SECRET=YOUR_CRON_SECRET_HERE
+# PREVIEW_SECRET=YOUR_SECRET_HERE
