--- a/.github/workflows/b-cms-fe-check-deploy.yml
+++ b/.github/workflows/b-cms-fe-check-deploy.yml
@@ -176,6 +176,33 @@ jobs:
           echo "PUSHED=true" >> $GITHUB_ENV
           echo "build_status=success" >> $GITHUB_OUTPUT
 
+      - name: Create production migrations directory on server if it doesn't exist
+        if: steps.check-changes.outputs.changes == 'true'
+        env:
+          SSH_KEY: ${{ secrets.LINUX_SSH_PRIVATE_KEY }}
+          SSH_USER: ${{ secrets.LINUX_USER_CICD }}
+          SERVER_IP: ${{ secrets.LINUX_SERVER_IP }}
+        run: |
+          # Setup SSH
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          cat >>~/.ssh/config <<END
+          Host prod
+            HostName $SERVER_IP
+            User $SSH_USER
+            IdentityFile ~/.ssh/id_ed25519
+            StrictHostKeyChecking no
+          END
+
+          # Create migrations directory ON THE HOST SERVER if it doesn't exist
+          # Note: This is necessary for bind mounts because:
+          # 1. It ensures the host directory exists before container startup
+          # 2. It sets proper ownership of the directory as the SSH user
+          # 3. While Docker can create it automatically, this gives us control over permissions
+          # 4. The entrypoint.sh also creates this directory inside the container as a backup
+          ssh prod "mkdir -p ~/payloadcms-cms-fe-portfolio2025__migrations"
+
       - name: SSH in and Deploy Updated CMS-Frontend image with Prod Secrets
         id: step-deploy--cms-fe
         env:
@@ -213,8 +240,14 @@ jobs:
 
           # Ensure Docker network exists (create if it doesn't)
           ssh prod "docker network ls --filter name=private-payloadcms-pg-dockernet -q | grep -q . || docker network create private-payloadcms-pg-dockernet"
-          
+
           # Deploy to remote server with environment file
+          # The critical addition here is the bind mount: -v ~/payload-migrations:/app/src/migrations
+          # This bind mount:
+          # 1. Maps the host directory ~/payload-migrations to container path /app/src/migrations
+          # 2. Allows migration files created in the container to persist on the host
+          # 3. Makes migration files accessible for committing to version control
+          # 4. Preserves migrations across container restarts or rebuilds
           ssh prod "docker pull ghcr.io/pmeaney/tmp-payloadcms-portfolio:latest && \
                     docker rm -f payloadcms-cms-fe-portfolio-prod || true && \
                     docker run -d \
@@ -223,6 +256,7 @@ jobs:
                       --network main-network--npm020325 \
                       -p 3000:3000 \
                       --env-file ~/payloadcms-prod-env.env \
+                      -v ~/payloadcms-cms-fe-portfolio2025__migrations:/app/src/migrations \
                       ghcr.io/pmeaney/tmp-payloadcms-portfolio:latest"
 
           echo "Deleting temporarily created prod env file..."
@@ -235,6 +269,74 @@ jobs:
           else
             echo "No changes detected, skipping deployment"
             echo "action_taken=No deployment needed" >> $GITHUB_OUTPUT
+          fi
+
+      # After successful deployment, fetch migrations back from server for committing
+      - name: Fetch migrations from server
+        if: steps.check-changes.outputs.changes == 'true' && env.deploy_status == 'success'
+        env:
+          SSH_KEY: ${{ secrets.LINUX_SSH_PRIVATE_KEY }}
+          SSH_USER: ${{ secrets.LINUX_USER_CICD }}
+          SERVER_IP: ${{ secrets.LINUX_SERVER_IP }}
+        run: |
+          # Setup SSH if not already done
+          if [ ! -f ~/.ssh/id_ed25519 ]; then
+            mkdir -p ~/.ssh/
+            echo "$SSH_KEY" > ~/.ssh/id_ed25519
+            chmod 600 ~/.ssh/id_ed25519
+            cat >>~/.ssh/config <<END
+          Host prod
+            HostName $SERVER_IP
+            User $SSH_USER
+            IdentityFile ~/.ssh/id_ed25519
+            StrictHostKeyChecking no
+          END
+          fi
+
+          # Wait a bit for migrations to complete
+          echo "Waiting for migrations to complete..."
+          sleep 10
+
+          # Create migrations directory locally if it doesn't exist
+          mkdir -p ./payloadcms-cms-fe-portfolio2025/src/migrations
+
+          # Copy migrations from server to local project
+          echo "Fetching migrations from server..."
+          scp -r prod:~/payloadcms-cms-fe-portfolio2025__migrations/* ./payloadcms-cms-fe-portfolio2025/src/migrations/ || true
+
+          # Check if any migrations were fetched
+          MIGRATION_COUNT=$(find ./payloadcms-cms-fe-portfolio2025/src/migrations -type f | wc -l)
+          if [ "$MIGRATION_COUNT" -gt 0 ]; then
+            echo "Successfully fetched $MIGRATION_COUNT migration files from server"
+          else
+            echo "No migration files were found or fetched from server"
+          fi
+
+      # Commit migration files back to the repository
+      - name: Commit migration files
+        if: steps.check-changes.outputs.changes == 'true' && env.deploy_status == 'success'
+        run: |
+          # Configure Git
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+
+          # Check if there are any new/modified migration files
+          MIGRATION_CHANGES=$(git status ./payloadcms-cms-fe-portfolio2025/src/migrations --porcelain)
+
+          if [ -n "$MIGRATION_CHANGES" ]; then
+            echo "New or modified migration files detected:"
+            echo "$MIGRATION_CHANGES"
+            
+            # Add and commit the migration files
+            git add ./payloadcms-cms-fe-portfolio2025/src/migrations
+            git commit -m "Auto-commit PayloadCMS migrations from production [skip ci]"
+            
+            # Push the changes back to the repository
+            git push origin main
+            
+            echo "Successfully committed and pushed migration files"
+          else
+            echo "No new migration files to commit"
           fi
 
       # Save deployment marker if deploy was successful
