--- a/payloadcms-cms-fe-portfolio2025/Dockerfile
+++ b/payloadcms-cms-fe-portfolio2025/Dockerfile
@@ -73,15 +73,9 @@ COPY --from=builder /app/redirects.js /runtime-prep/
 COPY --from=builder /app/next-sitemap.config.cjs /runtime-prep/
 COPY --from=builder /tmp/entrypoint.sh /runtime-prep/entrypoint.sh
 
-# Copy src directory, ensuring migrations folder exists
+# Create src directory structure but don't copy migrations
+# (migrations will be mounted from host)
 RUN mkdir -p /runtime-prep/src/migrations
-# Copy migrations if they exist (check first if directory has content)
-RUN if [ -d "/app/src/migrations" ] && [ "$(ls -A /app/src/migrations 2>/dev/null)" ]; then \
-      echo "Copying migrations..." && \
-      cp -r /app/src/migrations/* /runtime-prep/src/migrations/; \
-    else \
-      echo "No migrations to copy"; \
-    fi
 
 # Copy additional files based on build mode
 RUN if [ "$SKIP_NEXTJS_BUILD" = "true" ]; then \
