--- a/payloadcms-cms-fe-portfolio2025/.env
+++ b/payloadcms-cms-fe-portfolio2025/.env
@@ -1,5 +1,7 @@
-# Added by Payload
-
+# Added by Payload.  Be use to update 'NEXT_PUBLIC_SERVER_URL' to your live URL once ready-- for use by next.config.js
+# These are dev secrets.
+# the default prod secrets are at .github/defaults -- those go into the built images
+# the live prod secrets are in the github repo secrets
 DATABASE_URI=postgres://payloadcms-user:payloadcmsPass@pg-dev-payloadcms:5432/payloadcms-db
 PAYLOAD_SECRET=7596b4a8fcc3d8086f8f5001
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
