sync-from-prod.sh works (it pulls migration files).  Updated docker-compose.dev.yml to do full app mount (removed redundant ones). Added docs & updated readme

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@ public/sitemap*.xml
 *.pid
 *.seed
 *.pid.lock
+
+# Database backup files
+*.sql
+*.dump
+*.backup
+
+# Ignore everything in sync-from-prod except the relevant readme file
+sync-from-prod/*
+!sync-from-prod/DB-SYNC-README.md
