--- a/.github/workflows/b-cms-fe-check-deploy.yml
+++ b/.github/workflows/b-cms-fe-check-deploy.yml
@@ -10,7 +10,7 @@ on:
     secrets:
       LINUX_SSH_PRIVATE_KEY:
         required: true
-      LINUX_USER_CICD:
+      LINUX_USERNAME_CICD:
         required: true
       LINUX_SERVER_IP:
         required: true
@@ -180,7 +180,7 @@ jobs:
         if: steps.check-changes.outputs.changes == 'true'
         env:
           SSH_KEY: ${{ secrets.LINUX_SSH_PRIVATE_KEY }}
-          SSH_USER: ${{ secrets.LINUX_USER_CICD }}
+          SSH_USER: ${{ secrets.LINUX_USERNAME_CICD }}
           SERVER_IP: ${{ secrets.LINUX_SERVER_IP }}
         run: |
           # Setup SSH
@@ -210,7 +210,7 @@ jobs:
         id: step-deploy--cms-fe
         env:
           SSH_KEY: ${{ secrets.LINUX_SSH_PRIVATE_KEY }}
-          SSH_USER: ${{ secrets.LINUX_USER_CICD }}
+          SSH_USER: ${{ secrets.LINUX_USERNAME_CICD }}
           SERVER_IP: ${{ secrets.LINUX_SERVER_IP }}
           GHPAT: ${{ secrets.GHPAT__CICD_REPO_WORKFLOW_WRDPACKAGES }}
           PAYLOADCMS__PROD_ENV: ${{ secrets.PAYLOAD__SECRET_ENV_FILE }}
