--- a/payloadcms-cms-fe-portfolio2025/.env
+++ b/payloadcms-cms-fe-portfolio2025/.env
@@ -4,6 +4,6 @@
 # the live prod secrets are in the github repo secrets
 DATABASE_URI=postgres://payloadcms-user:payloadcmsPass@pg-dev-payloadcms:5432/payloadcms-db
 PAYLOAD_SECRET=7596b4a8fcc3d8086f8f5001
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000 #<-- when you add this to github actions cicd, be sure to provide the live url
 CRON_SECRET=YOUR_CRON_SECRET_HERE
 PREVIEW_SECRET=YOUR_SECRET_HERE
