--- a/.github/workflows/b-cms-fe-check-deploy.yml
+++ b/.github/workflows/b-cms-fe-check-deploy.yml
@@ -250,6 +250,10 @@ jobs:
           echo "Creating temporary environment file..."
           ssh prod "echo '$PAYLOADCMS__PROD_ENV' > ~/payloadcms-prod-env.env"
 
+          # Debug: Display the contents of the environment file
+          echo "Contents of the temporary environment file:"
+          ssh prod "cat ~/payloadcms-prod-env.env"
+
           # Ensure Docker network exists (create if it doesn't)
           ssh prod "docker network ls --filter name=private-payloadcms-pg-dockernet -q | grep -q . || docker network create private-payloadcms-pg-dockernet"
 
